pda接口、配送功能