@@ -19,6 +19,7 @@ import org.springframework.web.bind.annotation.*;
 import java.io.Serializable;
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
 
 /**
@@ -141,13 +142,9 @@ public class PermissionController {
     @PostMapping("/permissions/batch")
     @RequiresAuthentication
     public RestResponse delPermissions(@NonNull @RequestParam String delete) {
-        try {
-            delete = URLDecoder.decode(delete, "UTF-8");
-            List<Serializable> ids = JSON.parseArray(delete, Serializable.class);
-            permissionService.delPermissions(ids);
-        } catch (UnsupportedEncodingException e) {
-            throw new BaseException.IllegalArgumentException();
-        }
+        delete = URLDecoder.decode(delete, StandardCharsets.UTF_8);
+        List<Serializable> ids = JSON.parseArray(delete, Serializable.class);
+        permissionService.delPermissions(ids);
         return new RestResponse(HttpStatus.OK);
     }
 }
