@@ -20,6 +20,7 @@ import javax.validation.constraints.NotNull;
 import java.io.Serializable;
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
 
 /**
@@ -103,13 +104,9 @@ public class RoleController {
     @PostMapping("/roles/batch")
     @RequiresAuthentication
     public RestResponse delRoles(@NonNull @RequestParam String delete) {
-        try {
-            delete = URLDecoder.decode(delete, "UTF-8");
-            List<Serializable> ids = JSON.parseArray(delete, Serializable.class);
-            roleService.delRoles(ids);
-        } catch (UnsupportedEncodingException e) {
-            throw new BaseException.IllegalArgumentException();
-        }
+        delete = URLDecoder.decode(delete, StandardCharsets.UTF_8);
+        List<Serializable> ids = JSON.parseArray(delete, Serializable.class);
+        roleService.delRoles(ids);
         return new RestResponse(HttpStatus.OK);
     }
 
